[package]
name = "rs_bundler"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0", features = ["full", "visit", "fold"] }
quote = "1.0"
getopts = "0.2"
anyhow = "1.0"
log = "0.4"
env_logger = "0.8"